--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
 	"scripts": {
 		"start": "node index.js",
 		"dev": "nodemon index.js",
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"build:ui": "rm -rf dist && cd ./build && npm run build && cp -r dist ./build",
+		"deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push"
 	},
 	"author": "",
 	"license": "ISC",
