did build:ui with backend and frontend folder

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"dev": "nodemon index.js",
 		"start": "node index.js",
 		"build": "vite build",
-		"build:ui": "rm -rf dist && cd ../frontend && npm run build && cp -r dist ../backend",
+		"build:ui": "rm -rf dist && cd ./frontend && npm run build && cp -r dist ./backend",
 		"deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push",
 		"preview": "vite preview"
 	},
