--- a/package.json
+++ b/package.json
@@ -1,22 +1,14 @@
 {
 	"name": "part-3-9",
-	"private": true,
-	"version": "0.0.0",
+	"version": "1.0.0",
 	"main": "index.js",
 	"scripts": {
 		"dev": "nodemon index.js",
 		"start": "node index.js",
-		"build": "vite build",
-		"build:ui": "rm -rf dist && cd ./frontend && npm run build && cp -r dist ./backend",
-		"deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push",
-		"preview": "vite preview"
-	},
-	"devDependencies": {
-		"vite": "^5.2.0"
+		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"dependencies": {
 		"cors": "^2.8.5",
-		"debug": "^4.3.5",
 		"dotenv": "^16.4.5",
 		"express": "^4.19.2",
 		"mongoose": "^8.4.1",
