--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "part-3-9",
 	"version": "1.0.0",
-	"main": "index.js",
+	"main": "./dist/index.js",
 	"scripts": {
 		"dev": "nodemon index.js",
 		"start": "node index.js",
