--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 	},
 	"dependencies": {
 		"axios": "^1.7.2",
+		"common": "^0.2.5",
 		"cors": "^2.8.5",
 		"debug": "^4.3.5",
 		"dotenv": "^16.4.5",
