--- a/package.json
+++ b/package.json
@@ -1,26 +1,21 @@
 {
-  "name": "notebackend",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon index.js",
-    "start": "node index.js",
-    "lint": "eslint ."
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.1",
-    "express": "^4.18.2",
-    "mongoose": "^8.1.1"
-  },
-  "devDependencies": {
-    "@flydotio/dockerfile": "^0.5.0",
-    "@stylistic/eslint-plugin-js": "^1.6.1",
-    "eslint": "^8.56.0",
-    "nodemon": "^3.0.3"
-  }
+	"name": "part-3-9",
+	"version": "1.0.0",
+	"main": "dist/index.js",
+	"scripts": {
+		"dev": "nodemon index.js",
+		"start": "node index.js",
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"dependencies": {
+		"axios": "^1.7.2",
+		"cjs-loader": "^0.1.0",
+		"cors": "^2.8.5",
+		"debug": "^4.3.5",
+		"dotenv": "^16.4.5",
+		"express": "^4.19.2",
+		"mongoose": "^8.4.1",
+		"morgan": "^1.10.0",
+		"nodemon": "^3.1.3"
+	}
 }
